@@ -78,6 +78,7 @@ By default, FRU entries on other satellite controllers will not be
 read by default.  Bridging may not work on some interfaces/driver
 types.
 #include <@top_srcdir@/man/manpage-common-interpret-oem-data.man>
+#include <@top_srcdir@/man/manpage-common-sdr-options-heading.man>
 #include <@top_srcdir@/man/manpage-common-sdr-options.man>
 #include <@top_srcdir@/man/manpage-common-ignore-sdr-cache.man>
 #include <@top_srcdir@/man/manpage-common-hostranged-options-header.man>
